--- a/index.html
+++ b/index.html
@@ -11,11 +11,103 @@
 </head>
 
 <body>
+    <Header>
+        <section class="jumbotron jumbotron-fluid custom-jumbotron">
+            <div class="container">
+                <div>
+                    <div class="col-12 col-md-6">
+                        <h1>Weather Man</h1>
+                        <p>We're right 60% of the time... Everytime!</p>
+                    </div>
+        </section>
+    </Header>
 
+    <main>
+        <section class="container">
+            <div>
+                <form class="row">
+                    <div class="form-group col-12 col-md-6">
+                        <input for="search" type="text" id="search-input" placeholder="Location" class="form-control" />
+                    </div>
+                    <div class="form-group col-12 col-md-4">
+                        <button id="search" type="submit" class="btn btn-light">Search</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <section>
+            <!-- stored value -->
+        </section>
+        <section id="cityH1">
+            <h1>Five Day Forecast<span id="citySpan"></span></h1>
+        </section>
+        <section class="container-fluid">
+            <div id="cards" class="row justify-content-center">
+                <div class="card col-md-11 col-lg-2">
+                    <h1 class="card-header"> Sydney Forcast
+                    </h1>
+                    <div class="card-body">
+                        <h1>Date</h1>
+                        <img src="" alt="">
+                        <h2>temp</h2>
+                        <h2>wind</h2>
+                        <h2>humidity</h2>
+                        <h2>UV Index</h2>
+                    </div>
+                </div>
+                <div class="card col-md-11 col-lg-2">
+                    <h1 class="card-header"> Sydney Forcast
+                    </h1>
+                    <div class="card-body">
+                        <h1>Date</h1>
+                        <img src="" alt="">
+                        <h2>temp</h2>
+                        <h2>wind</h2>
+                        <h2>humidity</h2>
+                        <h2>UV Index</h2>
+                    </div>
+                </div>
+                <div class="card col-md-11 col-lg-2">
+                    <h1 class="card-header"> Sydney Forcast
+                    </h1>
+                    <div class="card-body">
+                        <h1>Date3</h1>
+                        <img src="" alt="">
+                        <h2>temp</h2>
+                        <h2>wind</h2>
+                        <h2>humidity</h2>
+                        <h2>UV Index</h2>
+                    </div>
+                </div>
+                <div class="card col-md-11 col-lg-2">
+                    <h1 class="card-header"> Sydney Forcast
+                    </h1>
+                    <div class="card-body">
+                        <h1>Date3</h1>
+                        <img src="" alt="">
+                        <h2>temp</h2>
+                        <h2>wind</h2>
+                        <h2>humidity</h2>
+                        <h2>UV Index</h2>
+                    </div>
+                </div>
+                <div class="card col-md-11 col-lg-2">
+                    <h1 class="card-header"> Sydney Forcast
+                    </h1>
+                    <div class="card-body">
+                        <h1>Date3</h1>
+                        <img src="" alt="">
+                        <h2>temp</h2>
+                        <h2>wind</h2>
+                        <h2>humidity</h2>
+                        <h2>UV Index</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./assets/script.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="./assets/script.js"></script>
 </body>
 
 </html>
