update layout for pre searched locations and update to save data function

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
                 </form>
             </div>
         </section>
-        <section>
+        <section class="container">
             <!-- stored value -->
+            <div id="storedLocations" class="row justify-content-center"></div>
         </section>
         <section id="cityH1">
             <h1>Five Day Forecast<span id="citySpan"></span></h1>
