updated to save function to prevent the same city being saved if it already exists

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
             </div>
         </section>
         <section class="container">
-            <!-- stored value -->
+            <!-- displays stored searches -->
             <div id="storedLocations" class="row justify-content-center"></div>
         </section>
         <section id="cityH1">
             <h1>Five Day Forecast<span id="citySpan"></span></h1>
         </section>
+        <!-- displays five day forecast cards -->
         <section class="container-fluid">
             <div id="cards" class="row justify-content-center">
             </div>
