--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <input for="search" type="text" id="search-input" placeholder="Location" class="form-control" />
                     </div>
                     <div class="form-group col-12 col-md-4">
-                        <button id="search" type="submit" class="btn btn-light">Search</button>
+                        <button id="search" type="submit" class="btn card btn-light">Search</button>
                     </div>
                 </form>
             </div>
